syntax="proto3";

package greeter;

service Greeter {
  rpc sayHello(HelloRequest) returns (HelloReply) {};
}

message HelloRequest {
  string name = 1;
  string something_else = 2;
}

message HelloReply {
  string message = 1;
}
